cabal-version:      3.0
name:               snek
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             shadowninja55
maintainer:         shadowninja1050@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable snek
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
      , base ^>=4.18.0.0
      , bytestring
      , deque
      , GLFW-b
      , generic-lens
      , lens
      , linear
      , mtl
      , OpenGL
      , random
      , sdl2
    hs-source-dirs:   app
    default-language: GHC2021
